--- a/app/src/main/res/drawable/ic_arrange.xml
+++ b/app/src/main/res/drawable/ic_arrange.xml
@@ -1,21 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
+    android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="48"
+    android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M16.74,5.63L22.76,5.63A0.74,0.74 0,0 1,23.5 6.37L23.5,6.38A0.74,0.74 0,0 1,22.76 7.12L16.74,7.12A0.74,0.74 0,0 1,16 6.38L16,6.37A0.74,0.74 0,0 1,16.74 5.63z"
-      android:fillColor="#3c3f43"/>
-  <path
-      android:pathData="M30.72,4.22 L28.07,6.85 26.83,5.62a0.75,0.75 0,0 0,-1.06 0h0a0.74,0.74 0,0 0,0 1L27,7.9l0.7,0.7a0.51,0.51 0,0 0,0.71 0l0.71,-0.7 2.65,-2.63a0.74,0.74 0,0 0,0 -1h0A0.75,0.75 0,0 0,30.72 4.22Z"
-      android:fillColor="#3c3f43"/>
-  <path
-      android:pathData="M30.72,10.16l-2.65,2.63 -1.24,-1.22a0.75,0.75 0,0 0,-1.06 0h0a0.74,0.74 0,0 0,0 1L27,13.84l0.7,0.7a0.5,0.5 0,0 0,0.71 0l0.71,-0.7 2.65,-2.62a0.75,0.75 0,0 0,0 -1.06h0A0.75,0.75 0,0 0,30.72 10.16Z"
-      android:fillColor="#3c3f43"/>
-  <path
-      android:pathData="M16.74,12.07L22.76,12.07A0.74,0.74 0,0 1,23.5 12.81L23.5,12.82A0.74,0.74 0,0 1,22.76 13.56L16.74,13.56A0.74,0.74 0,0 1,16 12.82L16,12.81A0.74,0.74 0,0 1,16.74 12.07z"
-      android:fillColor="#3c3f43"/>
-  <path
-      android:pathData="M16.74,18.51L31.26,18.51A0.74,0.74 0,0 1,32 19.25L32,19.26A0.74,0.74 0,0 1,31.26 20L16.74,20A0.74,0.74 0,0 1,16 19.26L16,19.25A0.74,0.74 0,0 1,16.74 18.51z"
-      android:fillColor="#3c3f43"/>
+
+    <path
+        android:fillColor="#595757"
+        android:pathData="M12.167,4h-2.025c-0.604,0-1.08,0.529-1.08,1.206v13.588c0,0.677,0.476,1.206,1.08,1.206h2.025 c0.605,0,1.08-0.529,1.08-1.206V5.206C13.247,4.529,12.772,4,12.167,4z M11.792,5.454v9.531h-1.273V5.454H11.792z M10.519,18.546 v-2.106h1.273v2.106H10.519z" />
+    <path
+        android:fillColor="#595757"
+        android:pathData="M7.104,6.693H5.079c-0.596,0-1.078,0.501-1.078,1.117v11.072C4.001,19.499,4.483,20,5.079,20h2.025 c0.596,0,1.081-0.501,1.081-1.117V7.811C8.186,7.195,7.7,6.693,7.104,6.693z M6.729,8.148v6.837H5.455V8.148H6.729z M5.455,18.546 v-2.106h1.274v2.106H5.455z" />
+    <path
+        android:fillColor="#595757"
+        android:pathData="M17.976,7.433c-0.098-0.534-0.551-0.921-1.075-0.921l-2.183,0.383 c-0.584,0.108-0.969,0.689-0.858,1.294l2.006,10.89c0.099,0.534,0.55,0.92,1.074,0.92l2.183-0.383 c0.585-0.108,0.969-0.689,0.859-1.294L17.976,7.433z M15.354,8.256l1.25-0.234l1.289,7.004l-1.256,0.209L15.354,8.256z M17.235,18.484L16.9,16.667l1.257-0.209l0.33,1.797L17.235,18.484z" />
 </vector>
