--- a/app/src/main/res/menu/book_source_sel.xml
+++ b/app/src/main/res/menu/book_source_sel.xml
@@ -23,6 +23,11 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/menu_top_sel"
+        android:title="@string/to_top"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/menu_export_selection"
         android:title="@string/export_selection"
         app:showAsAction="never" />
