--- a/app/src/main/res/layout/item_rss_article_1.xml
+++ b/app/src/main/res/layout/item_rss_article_1.xml
@@ -12,7 +12,9 @@
         android:contentDescription="@string/loading"
         android:visibility="visible"
         android:scaleType="centerCrop"
-        android:padding="12dp"
+        android:paddingTop="12dp"
+        android:paddingRight="12dp"
+        android:paddingBottom="12dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -30,6 +32,7 @@
         android:textStyle="bold"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
+        android:paddingTop="12dp"
         app:layout_constraintTop_toBottomOf="@+id/image_view"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
