--- a/app/src/main/res/layout/item_rss_article_1.xml
+++ b/app/src/main/res/layout/item_rss_article_1.xml
@@ -14,7 +14,7 @@
         android:scaleType="centerCrop"
         android:paddingTop="12dp"
         android:paddingRight="12dp"
-        android:paddingBottom="12dp"
+        android:paddingLeft="12dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
